# selenium-mcp-server

./: .gitignore  LICENSE  README.md  agent.py  mcp_instance.py  pyproject.toml  requirements.txt  server.py  system-prompt.txt
core/: browser_factory.py  mcp_instance.py  session_manager.py  version.py
prompts/: system_prompt.md  system_prompt.py  system_prompt_v1.2.1.md  system_prompt_v1.3.0.md
src/selenium_mcp/: server.py
src/selenium_mcp/core/: browser_factory.py  mcp_instance.py  session_manager.py
src/selenium_mcp/tools/: browser_tools.py  debug_tools.py  element_tools.py  interaction_tools.py  navigation_tools.py  page_tools.py
src/selenium_mcp/utils/: errors.py  generics.py  logger.py
test/: agent_test.py  mcp_test.py
tests/: mcp_test.py
tools/: browser_tools.py  debug_tools.py  element_tools.py  interaction_tools.py  navigation_tools.py  page_tools.py
utils/: generics.py  logger.py
